#20/fix: remove carousel styles from main.scss; remove overflow property from html tag

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,4 +1,3 @@
-html { overflow:  hidden; }
 .main-wrapper {
   font-size: 1rem;
   display: grid;
@@ -23,26 +22,7 @@ html { overflow:  hidden; }
 
   .footer-section {
     grid-area: footer-section;
-    border: 0.5 solid rgb(128, 128, 128);
-    box-shadow: 0px 1px 7px -1px rgba(0, 0, 0, 0.2), 0px -4px 5px 0px rgba(0, 0, 0, 0.14), 0px -1px 14px 5px rgba(0, 0, 0, 0.12);
-    .carousel{
-      padding-top: 10px;
-      width: 800px;
-      display: block;
-      margin: auto;
-      ul{
-        padding: 0px;
-      }
-      .carousel-item{
-        display: flex;
-        width: 100%;
-        height: 150px;
-        justify-content: space-around;
-      }
-      .slide{
-        background-color: #fff;
-      }
-    }
+    border-top: 0.5px solid rgb(128, 128, 128);
   }
 }
 
